# az-shell-cli

./: README.md  pyproject.toml
src/azsh/: __init__.py  agent.py  commands.py  main.py  mentions.py  repl.py  resource_cache.py  system_prompt.py  tools.py
